my-apps/productivity/karakeep/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karakeep
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
