my-apps/productivity/karakeep/chrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chrome
  namespace: karakeep
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: chrome
  template:
    metadata:
      labels:
        app: chrome
    spec:
      containers:
      - name: chrome
        image: gcr.io/zenika-hub/alpine-chrome:124
        args:
          - --no-sandbox
          - --disable-gpu
          - --disable-dev-shm-usage
          - --remote-debugging-address=0.0.0.0
          - --remote-debugging-port=9222
          - --hide-scrollbars
        ports:
        - containerPort: 9222
          name: debug
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 1Gi
            cpu: 1000m
