my-apps/productivity/karakeep/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep
  namespace: karakeep
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: karakeep
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: karakeep
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 7700
    targetPort: 7700
    protocol: TCP
  selector:
    app: meilisearch
---
apiVersion: v1
kind: Service
metadata:
  name: chrome
  namespace: karakeep
spec:
  type: ClusterIP
  ports:
  - name: debug
    port: 9222
    targetPort: 9222
    protocol: TCP
  selector:
    app: chrome
