my-apps/productivity/karakeep/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karakeep
  namespace: karakeep
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "KaraKeep"
    gethomepage.dev/group: "Productivity"
    gethomepage.dev/icon: "mdi-bookmark"
    gethomepage.dev/href: "https://kara.serverops.live"
    gethomepage.dev/pod-selector: "app=karakeep"
spec:
  hostnames:
  - kara.serverops.live
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal
    namespace: gateway
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: karakeep
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
